--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,13 @@
 <main id="main" class="news">
   <h2>Latest News</h2>
   
+
+<p><b>2025-12-27</b>: Uploaded several lecture notes in 2020 Covid-19 period <a href="/articles/lesson-notes.html">Read more</a></p>
+
 <p><b>2025-12-26</b>: Poster collection so far were uploaded here. <a href="/articles/posters.html">Read more</a></p>
 
 <p><b>2025-12-26</b>: My new site (this site) was initialized. <a href="/articles/this-site.html">Read more</a></p>
+
 
 
   <h2><a href="/old.html">1 More News</a></h2>
