--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
   <h2>Latest News</h2>
   
 
-<p><b>2025-12-27</b>: Uploaded several lecture notes in 2020 Covid-19 period <a href="/articles/lesson-notes.html">Read more</a></p>
+<p><b>2025-12-27</b>: Uploaded several lecture notes in 2020 Covid-19 period <a href="/articles/lecture-notes.html">Read more</a></p>
 
 <p><b>2025-12-26</b>: Poster collection so far were uploaded here. <a href="/articles/posters.html">Read more</a></p>
 
