feat: Add example article and update favicon to inline SVG
Delete old salt.jpg favicon and replace with inline SVG icon
displaying the character "鳰" across all site pages and
templates. Also add new example article to the articles index.

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="icon" type="image/jpg" href="/assets/salt.jpg">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>鳰</text></svg>">
     <link rel="stylesheet" href="/css/style.css">
     <title>Home - idg's Homepage</title>
   </head>
@@ -33,7 +33,7 @@
   <h2>Latest News</h2>
   
 
-<p><b>2025-12-27</b>: Uploaded several lecture notes in 2020 Covid-19 period <a href="/articles/lecture-notes.html">Read more</a></p>
+<p><b>2025-12-27</b>: Uploaded several lecture notes in 2020 Covid-19 period <a href="/articles/lesson-notes.html">Read more</a></p>
 
 <p><b>2025-12-26</b>: Poster collection so far were uploaded here. <a href="/articles/posters.html">Read more</a></p>
 
